--- a/css/nav-style.css
+++ b/css/nav-style.css
@@ -19,3 +19,39 @@
   color: #fff;
   cursor: pointer;
 } 
+
+/* Hamburger Styles */
+.hamburger-menu{
+  background-color: rgba(0,0,0,0.91);
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  opacity: 0;
+  overflow-y: scroll;
+  padding: 15px 30px;
+  position: fixed;
+  transition: all 0.35s ease-in-out;
+  transform: translateX(100%);
+  z-index: 10;
+  text-align: right;
+ }
+ 
+ .hamburger-menu a {
+   color: #fff;
+   display: block;
+   font-size: 16px;
+   margin: 24px auto;
+   text-align: center;
+   text-decoration: none;
+ }
+ .menu-close {
+   cursor: pointer;
+   width: 24px;
+   margin: 20px;
+ }
+
+ .menu-open {
+   transform: translateX(0%);
+   opacity: 1;
+ }
