--- a/css/services.css
+++ b/css/services.css
@@ -62,7 +62,7 @@ h3 {
   background-color: #000;
 }
 .nok-logo {
-  margin-left: 0px;
+  margin-left: 8px;
   padding-top: 20px;
   display: inline;
 }
@@ -70,7 +70,7 @@ h3 {
   /* display: inline;   */
   justify-content: end;  
   font-family: Poppins;
-  margin-right: 60px;
+  margin-right: 48px;
   text-decoration: none;
   color: #fff;
   cursor: pointer;
@@ -162,7 +162,9 @@ width: 50%;
   
 
     .cut{
-     padding-top: 80px;
+     padding-top: 60px;
+     /* margin-left: 80px; */
+
 }
 
  #black-overlay-left-services{
@@ -180,7 +182,7 @@ width: 50%;
 .cut, .colour {
   font-family: Playfair-Display;
   color: white;
-  margin-left: 60px;
+  padding-left: 64px;
   margin-bottom: 0px;
   font-weight: 700;
   font-size: 32px;
@@ -198,7 +200,7 @@ width: 50%;
 
 
 .services-nok table{
-  margin-left: 60px;
+  margin-left: 64px;
   color: white;
   font-family: Poppins;
 }
@@ -206,7 +208,7 @@ width: 50%;
   .services-nok table{
     width: 90%;
     /* margin-right: 120px; */
-    padding-right: 120px;
+    padding-right: 80px;
    
   }
 }
@@ -235,7 +237,7 @@ width: 50%;
 
 th td {
   display: flex;
-  margin-left: 60px;
+  padding-left: 64px;
   text-align: right;
   font-family: Poppins;
   font-size: 16px;
@@ -249,18 +251,19 @@ th td {
   } 
 
 td {
-    padding-left: 60px;
+    padding-left: 48px;
+    padding-right:20px;
 } 
 @media (max-width:910px){
   td{
     width: 50%;
     padding-left: 0;
     text-align: right;
-    padding-right: 80px;
+    padding-right: 50px;
   }
 }
 p {
-  margin-left: 60px;
+  padding-left: 64px;
   color: #dcdcdc;
   width: 400px;
 }
@@ -284,7 +287,7 @@ p{
    display: block; 
   font-size: 12px;
   color: #cdcdcd;
-  width: 250px;
+  width: 360px;
 }
 
 
