--- a/css/about.css
+++ b/css/about.css
@@ -75,7 +75,7 @@ h3 {
   background-color: #000;
 }
 .nok-logo {
-  margin-left: 0px;
+  margin-left: 8px;
   padding-top: 20px;
   display: inline;
 }
@@ -83,7 +83,7 @@ h3 {
   /* display: inline;   */
   justify-content: end;  
   font-family: Poppins;
-  margin-right: 60px;
+  margin-right: 48px;
   text-decoration: none;
   color: #fff;
   cursor: pointer;
@@ -91,7 +91,7 @@ h3 {
 
 .hamburger-icon {
   width: 60px;
-  margin-right: 60px;
+  margin-right: 48px;
   padding: 10px;
   display: none;
 }
@@ -146,17 +146,17 @@ h3 {
   margin: 0px;
 }
 
- @media (max-width:810px){
+ @media (max-width:900px){
   .about-nok{
     width: 100%;
   }
 }
-  @media (max-width: 810px){
+  @media (max-width: 900px){
     .about-nok p{
-      width: 390px;
-      
-    }
+      width: 480px;
   }
+}
+  
   
   
 
@@ -164,12 +164,12 @@ h3 {
   height: 900px;
   width: 50%;
 }
-@media (max-width:810px){
+@media (max-width:900px){
   .leftside-about{
     width: 200%;
   }
 }
-@media (max-width:810px){
+@media (max-width:900px){
   .rightside-about{
     display: none;
     /* width: 0%; */
@@ -204,7 +204,7 @@ h3 {
   background-color:rgba(0, 0, 0, 0.87);
   margin-left: 0;
 } 
-@media (max-width:810px){
+@media (max-width:900px){
   #black-overlay-left-about{
     width: 100%;
     z-index: 1000;
@@ -216,16 +216,17 @@ h3 {
 }  */
  .nokabout {
   font-size: 16px;
-  width: 75%;
+  width: 80%;
   color: #dcdcdc;
-  margin-left: 60px;
+  padding-left: 64px;
+  padding-right: 0px;
   margin-top: 0px;
-  padding-top: 80px;
+  padding-top: 60px;
 }  
-@media (max-width:810px){
+@media (max-width:900px){
   .nokabout {
     width: 200%;
-    margin-right: -60px;
+    margin-right: 40px;
   }
   } 
 span {
@@ -247,7 +248,7 @@ span {
     font-size: 12px;
   }
 }
-@media (max-width:910px){
+@media (max-width:1115px){
     .gift{
       visibility: hidden;
     }
@@ -256,7 +257,7 @@ span {
    text-align: center;
    padding-top: 16px;
   }
-@media (max-width:1155px){
+@media (max-width:1380px){
   .voucher{
     padding-top: 20px; 
      visibility: hidden; 
