--- a/css/awards.css
+++ b/css/awards.css
@@ -86,42 +86,7 @@ h3 {
       display: none;
     }
   } 
-  .hamburger-menu{
-   background-color: rgba(0,0,0,0.91);
-   bottom: 0;
-   left: 0;
-   right: 0;
-   top: 0;
-   opacity: 0;
-   overflow-y: scroll;
-   padding: 15px 30px;
-   position: fixed;
-   transition: all 0.35s ease-in-out;
-   transform: translateX(100%);
-   z-index: 10;
-   text-align: right;
-  
-  }
-  .hamburger-menu a {
-    color: #fff;
-    display: block;
-    font-size: 16px;
-    margin: 24px auto;
-    text-align: center;
-    text-decoration: none;
-  }
-  .menu-close {
-    cursor: pointer;
-    width: 24px;
-    padding: 20px;
-  }
-  
-  .menu-open {
-    transform: translateX(0%);
-    opacity: 1;
-  }
-   
-
+ 
 .awards-nok {
   display: flex;
   justify-content: center;
@@ -181,9 +146,9 @@ h3 {
      background-repeat: repeat no-repeat;
     background-size: cover;
     background-position: top; 
-     }
+     } */
 
-  */
+  
 
   
 
@@ -205,23 +170,53 @@ h3 {
     margin-bottom: 24px;
   }
 }  
-#carousel img {
-height: 900px;
+#carousel {
+  height: 100%;
+  overflow:hidden;
+  width: 100%;
+/* height: 900px; */
 }
-@media (max-width: 920px){
-  #carousel img{
-    height: 100%;
+@media (max-width: 850px) {
+  #carousel {
+    height: 50%;
+    overflow: hidden;
+  }
+}
+.carousel-item {
+  width: 100%;
+  height: 100%;
+}
+@media (max-width: 980px){
+  .carousel-item {
+    height: 50%;
+     overflow: hidden; 
     flex-direction: column;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
 }
 }
-.shane{
-height: 50%;
+@media (max-width: 1100px){
+  .carousel-item {
+  max-height: 100%;
 }
-@media (min-width:920px){
+}
+@media (max-width: 1100px){
+  .carousel-item {
+  max-height: 100%;
+  margin-bottom: 10px;
+}
+}
+.shane img{
+height: 100%;
+width: 100%;
+}
+@media (min-width:850px){
   .shane{
-    display: none;
+    display: none; 
     height: 100%;
     width: 100%;
+    padding-bottom: 20px;
+    padding-top: 0px;
   }
 
 }
