--- a/css/contact.css
+++ b/css/contact.css
@@ -268,6 +268,7 @@ h3 {
     body {
       background-color: #000;
     }
+    
     .footer{
       display: flex;
       justify-content: center;
@@ -296,7 +297,7 @@ h3 {
         padding: 8px; 
        font-family: "Poppins";
     }
-    .contact-address p{
+    .contact-address {
       margin: auto; 
       text-align: center;
       margin-top: 20px;
@@ -305,7 +306,7 @@ h3 {
       margin-bottom: 40px;
     }
     @media screen and (max-width:780px){
-      .contact-address p {
+      .contact-address  {
         width:395px;
       }
     }
