--- a/css/nav-style.css
+++ b/css/nav-style.css
@@ -10,9 +10,8 @@
   display: inline;
 }
 .topnav-right {
-   /* display: flex;  */
-  /* display: inline;   */
-  justify-content: end;  
+  
+justify-content: end;  
   font-family: Poppins;
   margin-right: 48px;
   text-decoration: none;
@@ -34,7 +33,7 @@
 
 /* Hamburger Styles */
 .hamburger-menu{
-  background-color: rgba(0,0,0,0.91);
+  background-color: rgba(0,0,0,0.95);
   bottom: 0;
   left: 0;
   right: 0;
@@ -48,11 +47,11 @@
   z-index: 10;
   text-align: right;
  }
- /* @media screen and (max-width: 1085px){
+  @media screen and (max-width: 1085px){
    .hamburger-menu{
      display: block;
    }
- } */
+ } 
  
  .hamburger-menu a {
    color: #fff;
